--- a/src/app/components/attribute-dictionary/add-attribute-dictionary/add-attribute-dictionary.component.html
+++ b/src/app/components/attribute-dictionary/add-attribute-dictionary/add-attribute-dictionary.component.html
@@ -8,12 +8,18 @@
           'is-valid': this.addAttributeDictionaryForm.controls.name.status === 'VALID',
           'form-control': true,
         }" formControlName="name" id="name" required></textarea>
-      <div *ngIf="this.addAttributeDictionaryForm.controls.name.errors" class="invalid-feedback">
-        <div *ngIf="this.addAttributeDictionaryForm.controls.name.errors.required">Attribute name is required</div>
-        <div *ngIf="this.addAttributeDictionaryForm.controls.name.errors.minlength">
-          Attribute name must be at least 6 characters
+      @if (this.addAttributeDictionaryForm.controls.name.errors) {
+        <div class="invalid-feedback">
+          @if (this.addAttributeDictionaryForm.controls.name.errors.required) {
+            <div>Attribute name is required</div>
+          }
+          @if (this.addAttributeDictionaryForm.controls.name.errors.minlength) {
+            <div>
+              Attribute name must be at least 6 characters
+            </div>
+          }
         </div>
-      </div>
+      }
     </div>
     <div class="row">
       <div class="col">
@@ -24,13 +30,19 @@
               'is-valid': this.addAttributeDictionaryForm.controls.type.status === 'VALID',
               'form-select': true,
             }" id="type">
-            <option *ngFor="let typeObj of deviceTypeDict['list']; let i = index">
-              {{ typeObj.name }}
-            </option>
+            @for (typeObj of deviceTypeDict['list']; track typeObj; let i = $index) {
+              <option>
+                {{ typeObj.name }}
+              </option>
+            }
           </select>
-          <div *ngIf="this.addAttributeDictionaryForm.controls.type.errors" class="invalid-feedback">
-            <div *ngIf="this.addAttributeDictionaryForm.controls.type.errors.required">Category is required</div>
-          </div>
+          @if (this.addAttributeDictionaryForm.controls.type.errors) {
+            <div class="invalid-feedback">
+              @if (this.addAttributeDictionaryForm.controls.type.errors.required) {
+                <div>Category is required</div>
+              }
+            </div>
+          }
           <div>
             {{ this.toString(this.addAttributeDictionaryForm.controls.type.dirty) }}
           </div>
@@ -45,15 +57,21 @@
               'is-valid': this.addAttributeDictionaryForm.controls.componentName.status === 'VALID',
               'form-select': true,
             }">
-            <option *ngFor="let componentObj of componentDictionary.getAll(); let i = index">
-              {{ componentObj.name }}
-            </option>
+            @for (componentObj of componentDictionary.getAll(); track componentObj; let i = $index) {
+              <option>
+                {{ componentObj.name }}
+              </option>
+            }
           </select>
-          <div *ngIf="this.addAttributeDictionaryForm.controls.componentName.errors" class="invalid-feedback">
-            <div *ngIf="this.addAttributeDictionaryForm.controls.componentName.errors.required">Component Name is
-              required
+          @if (this.addAttributeDictionaryForm.controls.componentName.errors) {
+            <div class="invalid-feedback">
+              @if (this.addAttributeDictionaryForm.controls.componentName.errors.required) {
+                <div>Component Name is
+                  required
+                </div>
+              }
             </div>
-          </div>
+          }
         </div>
       </div>
       <div class="col">
@@ -64,14 +82,20 @@
               'is-valid': this.addAttributeDictionaryForm.controls.unit.status === 'VALID',
               'form-select': true,
             }" id="unit">
-            <option *ngFor="let componentObj of unitDictionary.getAllUnits(); let i = index">
-              {{ componentObj.name }}
-            </option>
+            @for (componentObj of unitDictionary.getAllUnits(); track componentObj; let i = $index) {
+              <option>
+                {{ componentObj.name }}
+              </option>
+            }
           </select>
-          <div *ngIf="this.addAttributeDictionaryForm.controls.unit.errors" class="invalid-feedback">
-            <div *ngIf="this.addAttributeDictionaryForm.controls.unit.errors.required">Unit is required
+          @if (this.addAttributeDictionaryForm.controls.unit.errors) {
+            <div class="invalid-feedback">
+              @if (this.addAttributeDictionaryForm.controls.unit.errors.required) {
+                <div>Unit is required
+                </div>
+              }
             </div>
-          </div>
+          }
         </div>
       </div>
     </div>
@@ -84,19 +108,25 @@
               'is-valid': this.addAttributeDictionaryForm.controls.description.status === 'VALID',
               'form-control': true,
             }">{{ this.addAttributeDictionaryForm.value.description }}</textarea>
-          <div *ngIf="this.addAttributeDictionaryForm.controls.description.errors" class="invalid-feedback">
-            <div *ngIf="this.addAttributeDictionaryForm.controls.description.errors.required">Description is
-              required</div>
-          </div>
+          @if (this.addAttributeDictionaryForm.controls.description.errors) {
+            <div class="invalid-feedback">
+              @if (this.addAttributeDictionaryForm.controls.description.errors.required) {
+                <div>Description is
+                required</div>
+              }
+            </div>
+          }
         </div>
       </div>
       <div class="form-group mb-3">
         <button type="submit" [disabled]="isFormInvalid" class="btn btn-primary">
           Add model
         </button>
-        <div *ngIf="isFormInvalid" class="form-error-message">
-          Form is invalid
-        </div>
+        @if (isFormInvalid) {
+          <div class="form-error-message">
+            Form is invalid
+          </div>
+        }
       </div>
     </div>
   </form>
