--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -2,7 +2,7 @@
   <h2><i class="bi bi-bar-chart"></i> Add Attribute</h2>
   <i class="bi bi-columns"></i>
   <span class="text-primary d-inline-flex focus-ring py-1 px-2 text-decoration-none">
-    {{ this.toString(this.addAttributeFrom.controls.id.value) }}</span>
+  {{ this.toString(this.addAttributeFrom.controls.id.value) }}</span>
   <form [formGroup]="addAttributeFrom" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
     <div class="row g-3">
       <h4>Attribute object</h4>
@@ -16,13 +16,17 @@
                   'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
                   'form-select': true,
                 }" id="deviceId">
-                <option *ngFor="let deviceObj of deviceDictionary; let i = index" value="{{ deviceObj._id }}">
-                  {{ deviceObj.name }}
-                </option>
+                @for (deviceObj of deviceDictionary; track deviceObj; let i = $index) {
+                  <option value="{{ deviceObj._id }}">
+                    {{ deviceObj.name }}
+                  </option>
+                }
               </select>
-              <div *ngIf="addAttributeFrom.hasError('atLeastOneValidator')" class="error-message">
-                One of field: device, model or connection is required
-              </div>
+              @if (addAttributeFrom.hasError('atLeastOneValidator')) {
+                <div class="error-message">
+                  One of field: device, model or connection is required
+                </div>
+              }
               <div class="log-message">
                 {{ this.toString(this.addAttributeFrom.controls.deviceId.value) }}
               </div>
@@ -36,13 +40,17 @@
                   'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
                   'form-select': true,
                 }" id="modelId">
-                <option *ngFor="let modelObj of modelDictionary; let i = index" value="{{ modelObj._id }}">
-                  {{ modelObj.name }}
-                </option>
+                @for (modelObj of modelDictionary; track modelObj; let i = $index) {
+                  <option value="{{ modelObj._id }}">
+                    {{ modelObj.name }}
+                  </option>
+                }
               </select>
-              <div *ngIf="addAttributeFrom.hasError('atLeastOneValidator')" class="error-message">
-                One of field: device, model or connection is required
-              </div>
+              @if (addAttributeFrom.hasError('atLeastOneValidator')) {
+                <div class="error-message">
+                  One of field: device, model or connection is required
+                </div>
+              }
               <div class="log-message">
                 {{ this.toString(this.addAttributeFrom.controls.modelId.value) }}
               </div>
@@ -56,14 +64,18 @@
                   'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
                   'form-select': true,
                 }" id="connectionId">
-                <option *ngFor="let connectionObj of connectionDictionary; let i = index"
-                  value="{{ connectionObj._id }}">
-                  {{ connectionObj.name }}
-                </option>
+                @for (connectionObj of connectionDictionary; track connectionObj; let i = $index) {
+                  <option
+                    value="{{ connectionObj._id }}">
+                    {{ connectionObj.name }}
+                  </option>
+                }
               </select>
-              <div *ngIf="addAttributeFrom.hasError('atLeastOneValidator')" class="error-message">
-                One of field: device, model or connection is required
-              </div>
+              @if (addAttributeFrom.hasError('atLeastOneValidator')) {
+                <div class="error-message">
+                  One of field: device, model or connection is required
+                </div>
+              }
               <div class="log-message">
                 {{ this.toString(this.addAttributeFrom.controls.connectionId.value) }}
               </div>
@@ -80,16 +92,22 @@
               'is-valid': this.addAttributeFrom.controls.attributeDictionaryId.status === 'VALID',
               'form-select': true,
             }" id="attributeDictionaryId">
-            <option *ngFor="let attributeDictionaryObj of attributeDictionary; let i = index"
-              value="{{ attributeDictionaryObj._id }}">
-              {{ attributeDictionaryObj.name }}
-            </option>
+            @for (attributeDictionaryObj of attributeDictionary; track attributeDictionaryObj; let i = $index) {
+              <option
+                value="{{ attributeDictionaryObj._id }}">
+                {{ attributeDictionaryObj.name }}
+              </option>
+            }
           </select>
-          <div *ngIf="this.addAttributeFrom.controls.attributeDictionaryId.errors" class="invalid-feedback">
-            <div *ngIf="this.addAttributeFrom.controls.attributeDictionaryId.errors.required">
-              attributeDictionaryId is required
+          @if (this.addAttributeFrom.controls.attributeDictionaryId.errors) {
+            <div class="invalid-feedback">
+              @if (this.addAttributeFrom.controls.attributeDictionaryId.errors.required) {
+                <div>
+                  attributeDictionaryId is required
+                </div>
+              }
             </div>
-          </div>
+          }
           <div class="log-message">
             {{ this.toString(this.addAttributeFrom.controls.attributeDictionaryId) }}
           </div>
@@ -107,12 +125,18 @@
               'form-control': true,
             }" />
           <div class="invalid-feedback">Please select a valid state.</div>
-          <div *ngIf="this.addAttributeFrom.controls.value.errors" class="invalid-feedback">
-            <div *ngIf="this.addAttributeFrom.controls.value.errors.required">Value is required</div>
-            <div *ngIf="this.addAttributeFrom.controls.value.errors.minlength">
-              Value must be at least 250 characters
+          @if (this.addAttributeFrom.controls.value.errors) {
+            <div class="invalid-feedback">
+              @if (this.addAttributeFrom.controls.value.errors.required) {
+                <div>Value is required</div>
+              }
+              @if (this.addAttributeFrom.controls.value.errors.minlength) {
+                <div>
+                  Value must be at least 250 characters
+                </div>
+              }
             </div>
-          </div>
+          }
         </div>
       </div>
     </div>
@@ -128,13 +152,19 @@
             <i class="bi bi-bookmark-plus"></i> Generate random data
           </button>
 
-          <div *ngIf="!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)">Form is invalid</div>
-          <span class="text-danger" *ngIf="addAttributeFrom.hasError('atLeastOneValidator')">
-            Fill one of Device, Model or Connection first.
-          </span>
-          <div *ngIf="!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)" class="invalid-feedback">
-            Form is invalid
-          </div>
+          @if (!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)) {
+            <div>Form is invalid</div>
+          }
+          @if (addAttributeFrom.hasError('atLeastOneValidator')) {
+            <span class="text-danger">
+              Fill one of Device, Model or Connection first.
+            </span>
+          }
+          @if (!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)) {
+            <div class="invalid-feedback">
+              Form is invalid
+            </div>
+          }
           <!-- <div class="log-message">atLeastOneValidator: {{ addAttributeFrom.hasError('atLeastOneValidator') }}</div>
           <div class="log-message">addAttributeFrom.value: {{ toString(addAttributeFrom.value) }}</div>
           <div class="log-message">addAttributeFrom.valid: {{ toString(this.addAttributeFrom.valid) }}</div>
