--- a/src/app/components/connection/edit-connection/edit-connection.component.html
+++ b/src/app/components/connection/edit-connection/edit-connection.component.html
@@ -21,13 +21,21 @@
           <div class="valid-feedback">Looks good!</div>
           <div class="invalid-feedback">Please choose a name 6 char len.</div>
 
-          <div *ngIf="form.get('name')?.invalid">
-            <div *ngIf="form.get('name')?.errors?.['required']">Name is required.</div>
-            <div *ngIf="form.get('name')?.errors?.['minlength']">Name must be at least 6 characters long.</div>
-          </div>
-          <div *ngIf="(form.get('name')?.dirty || form.get('name')?.touched) && form.get('name')?.invalid">
-            Please provide connection name.
-          </div>
+          @if (form.get('name')?.invalid) {
+            <div>
+              @if (form.get('name')?.errors?.['required']) {
+                <div>Name is required.</div>
+              }
+              @if (form.get('name')?.errors?.['minlength']) {
+                <div>Name must be at least 6 characters long.</div>
+              }
+            </div>
+          }
+          @if ((form.get('name')?.dirty || form.get('name')?.touched) && form.get('name')?.invalid) {
+            <div>
+              Please provide connection name.
+            </div>
+          }
         </div>
       </div>
     </div>
@@ -45,16 +53,21 @@
             }"
             id="deviceIdFrom"
             ng-class="this.form.controls.deviceIdFrom.status ? 'error' : ''">
-            <option
-              *ngFor="let deviceFromObj of deviceList; let i = index"
-              [value]="deviceFromObj._id"
-              [selected]="deviceFromObj._id === this.connection.deviceIdFrom">
-              {{ deviceFromObj.name }}
-            </option>
+            @for (deviceFromObj of deviceList; track deviceFromObj; let i = $index) {
+              <option
+                [value]="deviceFromObj._id"
+                [selected]="deviceFromObj._id === this.connection.deviceIdFrom">
+                {{ deviceFromObj.name }}
+              </option>
+            }
           </select>
-          <div *ngIf="this.form.controls.deviceIdFrom.errors" class="invalid-feedback">
-            <div *ngIf="this.form.controls.deviceIdFrom.errors.required">attributeDictionaryId is required</div>
-          </div>
+          @if (this.form.controls.deviceIdFrom.errors) {
+            <div class="invalid-feedback">
+              @if (this.form.controls.deviceIdFrom.errors.required) {
+                <div>attributeDictionaryId is required</div>
+              }
+            </div>
+          }
           <div class="log-message">
             {{ this.toString(this.form.controls.deviceIdFrom.value) }}
           </div>
@@ -72,16 +85,21 @@
               'form-select': true,
             }"
             id="deviceIdTo">
-            <option
-              *ngFor="let deviceToObj of deviceList; let i = index"
-              [value]="deviceToObj._id"
-              [selected]="deviceToObj._id === this.connection.deviceIdTo">
-              {{ deviceToObj.name }}
-            </option>
+            @for (deviceToObj of deviceList; track deviceToObj; let i = $index) {
+              <option
+                [value]="deviceToObj._id"
+                [selected]="deviceToObj._id === this.connection.deviceIdTo">
+                {{ deviceToObj.name }}
+              </option>
+            }
           </select>
-          <div *ngIf="this.form.controls.deviceIdTo.errors" class="invalid-feedback">
-            <div *ngIf="this.form.controls.deviceIdTo.errors.required">attributeDictionaryId is required</div>
-          </div>
+          @if (this.form.controls.deviceIdTo.errors) {
+            <div class="invalid-feedback">
+              @if (this.form.controls.deviceIdTo.errors.required) {
+                <div>attributeDictionaryId is required</div>
+              }
+            </div>
+          }
           <div class="log-message">
             {{ this.toString(this.form.controls.deviceIdTo.value) }}
           </div>
@@ -100,8 +118,12 @@
         }">
         <i class="bi bi-pencil-square"></i> Update
       </button>
-      <div *ngIf="!this.form.valid" class="invalid-feedback">Form is invalid</div>
-      <div *ngIf="this.form.valid" class="valid-feedback">Form is valid</div>
+      @if (!this.form.valid) {
+        <div class="invalid-feedback">Form is invalid</div>
+      }
+      @if (this.form.valid) {
+        <div class="valid-feedback">Form is valid</div>
+      }
     </div>
   </form>
 </div>
